Corr factors obtained

--- a/NeuralAnalysis.ipynb
+++ b/NeuralAnalysis.ipynb
@@ -14,11 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using Theano backend.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -37,12 +44,26 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.externals import joblib\n",
     "\n",
+    "\n",
+    "from sklearn import cross_validation\n",
+    "from sklearn import preprocessing\n",
+    "\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers.core import Dense, Dropout, Activation\n",
+    "from keras.optimizers import SGD\n",
+    "import keras.callbacks as callbacks\n",
+    "from keras.utils import np_utils\n",
+    "\n",
+    "from datetime import datetime  \n",
+    "from datetime import timedelta \n",
+    "import random\n",
+    "\n",
     "print \"All Right!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +93,7 @@
        "          6.82103906e+01,   5.50991584e+01,   5.35117266e+01]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +140,7 @@
        "         -3.02542996e+00,   6.82103906e+01,   5.50991584e+01]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -155,7 +176,7 @@
        "       [  53.51172656]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +264,7 @@
     "    \n",
     "    norm_target = data_target/MOP\n",
     "\n",
-    "    print 'Train Process for %i Fold'%(ifold)\n",
+    "    print 'Train Process for %i Fold'%(ifold+1)\n",
     "    \n",
     "    best_init = 0\n",
     "    best_loss = 999\n",
@@ -282,6 +303,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output path define\n"
+     ]
+    }
+   ],
+   "source": [
+    "output = \"/home/micael/MyWorkspace/DATA/NN_outputs\"\n",
+    "print \"Output path define\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 73,
    "metadata": {
     "collapsed": false
@@ -300,8 +341,8 @@
    ],
    "source": [
     "# Save model, train info and train description\n",
-    "from keras.models import load_model\n",
-    "output = \"/home/micael/MyWorkspace/DATA/NN_outputs\"\n",
+    "\n",
+    "\n",
     "\n",
     "model.save(output+\"/\"+\"Model2.h5\")\n",
     "\n",
@@ -524,6 +565,80 @@
     "plt.xlabel(\"Pt Truth\")\n",
     "plt.ylabel(\"Frequency\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.29554272]\n",
+      " [ 1.25770259]\n",
+      " [ 2.26570892]\n",
+      " ..., \n",
+      " [ 0.80239081]\n",
+      " [ 2.24941707]\n",
+      " [ 1.13131356]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import load_model\n",
+    "model=load_model(output+\"/\"+\"Model2.h5\")\n",
+    "\n",
+    "test_id= random.sample(range(data_inputs.shape[0]),int(np.floor(0.1*data_target.shape[0])))\n",
+    "lista_id = np.asarray(range(0, data_inputs.shape[0]))\n",
+    "all_id = np.ndarray.tolist(lista_id)\n",
+    "train_id = list(set(lista_id) - set(test_id))\n",
+    "\n",
+    "# normalize data based in train set\n",
+    "\n",
+    "scaler = preprocessing.StandardScaler().fit(data_inputs[train_id,:])        \n",
+    "norm_all_data = scaler.transform(data_inputs)\n",
+    "    \n",
+    "# Normalize the outputs\n",
+    "[freq, target_values] = np.histogram(data_target[train_id],\n",
+    "            bins=np.linspace(data_target[train_id].min(),data_target[train_id].max(),50))\n",
+    "\n",
+    "MOP = target_values[np.argmax(freq)]\n",
+    "    \n",
+    "norm_target = data_target/MOP\n",
+    "\n",
+    "NN_output = model.predict(norm_all_data, batch_size=8, verbose=0)\n",
+    "print NN_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  60.51470184]\n",
+      " [  58.74719238]\n",
+      " [ 105.83108521]\n",
+      " ..., \n",
+      " [  37.47961426]\n",
+      " [ 105.07009888]\n",
+      " [  52.84357071]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "NN_output_noNorm = NN_output * MOP\n",
+    "np.save(output\"\")\n",
+    "print NN_output_noNorm"
    ]
   }
  ],
