--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -1417,7 +1417,7 @@
     "        clone_list_PtRel.append(newhist)\n",
     "        \n",
     "    c6 = rootnotes.canvas(\"c6_\"+process, (800, 600))\n",
-    "    HistogramFunctions.DrawList1DHistInCanvas(clone_list_PtRel, \"Relative Transverse Momentum\", \" P_{T} #left[GeV#right] \", \"Events\", c6)\n",
+    "    HistogramFunctions.DrawList1DHistInCanvas(clone_list_PtRel, \"Relative Transverse Momentum\", \" Pt_{rel} #left[GeV#right] \", \"Events\", c6)\n",
     "    \n",
     "    c6.Print(output+\"/\"+process+\"_PtRelAll.png\")\n",
     "    print \"imagem criada\", process\n",
