--- a/StatisticalAnalysis.ipynb
+++ b/StatisticalAnalysis.ipynb
@@ -2,48 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
    "source": [
     "# Import all library.\n",
     "\n",
     "import ROOT\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from functions import HistogramFunctions,AuxiliarFunctions,FigureFunctions,FitFunctions,rootnotes"
+    "from functions import HistogramFunctions,AuxiliarFunctions,FigureFunctions,FitFunctions,rootnotes\n",
+    "print \"ok\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  9.52196307e-03,   6.12077856e-05,   1.65209174e-02, ...,\n",
-       "          9.21870469e+01,   5.98104895e+01,   6.10195977e+01],\n",
-       "       [  1.67018827e-02,   1.13179535e-01,   9.47747454e-02, ...,\n",
-       "          1.07602320e+02,   5.98104895e+01,   6.44654687e+01],\n",
-       "       [  8.95111356e-03,   9.14592529e-05,   8.82276613e-03, ...,\n",
-       "          3.70010500e+02,   4.97765697e+01,   1.06724656e+02],\n",
-       "       ..., \n",
-       "       [  1.62160210e-02,   5.48769441e-03,   2.28184238e-02, ...,\n",
-       "          3.86259570e+01,   3.57536859e+01,   3.39022539e+01],\n",
-       "       [  1.42509257e-02,   1.21706940e-01,   4.58930284e-02, ...,\n",
-       "          1.07292875e+02,   5.50991584e+01,   9.68779375e+01],\n",
-       "       [  1.58070903e-02,   4.79239076e-02,   1.20003656e-01, ...,\n",
-       "          6.82103906e+01,   5.50991584e+01,   5.35117266e+01]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array done  ZZ\n"
+     ]
     }
    ],
    "source": [
@@ -51,7 +49,7 @@
     "#Use ROOT in order to create a numpy array with selected variables\n",
     "\n",
     "#processes = \"lvbb125,TTbar,Wbb,Wbl,Wll,Wcl,Wcc,WW,WZ,ZZ\"\n",
-    "processes = \"lvbb125\"\n",
+    "processes = \"ZZ\"\n",
     "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results/DataFiles\"\n",
     "\n",
     "data_path = \"/home/isabella/Workspace/Adrian2015/Public/WH/output/local/readPaul_1_0_J1Pt45+2BTag+TruthGENWZ+Clean_1_perevent+perjet\"\n",
@@ -101,12 +99,8 @@
     "        PtRel_j1_EMJESGSCMu = AuxiliarFunctions.PtRelative(E1_EMJESGSCMu,angle1_EMJESGSCMu)\n",
     "    \n",
     "        #==========================\n",
-    "        #========Target===========\n",
+    "        #==========================\n",
     "    \n",
-    "        #j1\n",
-    "        Pt1_GENWZ = tree.j1_GENWZ_Pt\n",
-    "        #j2\n",
-    "        Pt2_GENWZ = tree.j2_GENWZ_Pt\n",
     "    \n",
     "        j1_FracEM3 = tree.j1_FracEM3\n",
     "        j1_FracTile0 = tree.j1_FracTile0\n",
@@ -126,47 +120,50 @@
     "    \n",
     "    \n",
     "        # Create a numpy array with all data\n",
-    "        dataBuffer = np.array([[j1_FracEM3, j1_FracTile0, j1_TrkWidth, j1_EMF, j1_JVF, j1_NTrk, j1_SumPtTrk, Pt1_EMJESGSCMu, Eta1_EMJESGSCMu, Phi1_EMJESGSCMu, E1_EMJESGSCMu, PtRel_j1_EMJESGSCMu, Pt1_GENWZ], [j2_FracEM3, j2_FracTile0, j2_TrkWidth, j2_EMF, j2_JVF, j2_NTrk, j2_SumPtTrk, Pt2_EMJESGSCMu, Eta2_EMJESGSCMu, Phi2_EMJESGSCMu, E2_EMJESGSCMu, PtRel_j1_EMJESGSCMu, Pt2_GENWZ]])\n",
+    "        dataBuffer = np.array([[j1_FracEM3, j1_FracTile0, j1_TrkWidth, j1_EMF, j1_JVF, j1_NTrk, j1_SumPtTrk, Pt1_EMJESGSCMu, Eta1_EMJESGSCMu, Phi1_EMJESGSCMu, E1_EMJESGSCMu, PtRel_j1_EMJESGSCMu,\n",
+    "                                j2_FracEM3, j2_FracTile0, j2_TrkWidth, j2_EMF, j2_JVF, j2_NTrk, j2_SumPtTrk, Pt2_EMJESGSCMu, Eta2_EMJESGSCMu, Phi2_EMJESGSCMu, E2_EMJESGSCMu, PtRel_j1_EMJESGSCMu]])\n",
     "        if i==0:\n",
     "            data = dataBuffer\n",
     "        else:\n",
     "            data = np.append(data,dataBuffer, axis=0)\n",
-    "    np.save(output+\"/\"+process+\"Array\",data)\n",
-    "    #joblib.dump(data,output+\"/\"+process+\"Array\")\n",
-    "\n",
-    "data"
+    "    np.save(output+\"/\"+process+\"Matrix\",data)\n",
+    "    print \"Array done \", process \n",
+    "    #joblib.dump(data,output+\"/\"+process+\"Array\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(191100, 13)"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZZ (12881, 24)\n"
+     ]
     }
    ],
    "source": [
     "# Confirm our array shape\n",
-    "signal = np.load(output+\"/\"+\"lvbb125Array.npy\")\n",
     "\n",
-    "signal.shape"
+    "for process in processes.split(\",\"):\n",
+    "    data_matrix = np.load(output+\"/\"+process+\"Matrix.npy\")\n",
+    "\n",
+    "    print process, data_matrix.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 83,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
