--- a/StatisticalAnalysis.ipynb
+++ b/StatisticalAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -40,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array done  ZZ\n"
+      "Array done  TTbar\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
     "#Use ROOT in order to create a numpy array with selected variables\n",
     "\n",
     "#processes = \"lvbb125,TTbar,Wbb,Wbl,Wll,Wcl,Wcc,WW,WZ,ZZ\"\n",
-    "processes = \"ZZ\"\n",
+    "processes = \"TTbar\"\n",
     "output = \"/home/isabella/Workspace/python/PtRelAnalysis/PtRelAnalysis/Results/DataFiles\"\n",
     "\n",
     "data_path = \"/home/isabella/Workspace/Adrian2015/Public/WH/output/local/readPaul_1_0_J1Pt45+2BTag+TruthGENWZ+Clean_1_perevent+perjet\"\n",
@@ -59,7 +59,8 @@
     "    treeName = \"perevent\"\n",
     "    file = ROOT.TFile(data_input,\"READ\")\n",
     "    tree = file.Get(treeName)\n",
-    "    nrEvents = tree.GetEntries()\n",
+    "    #nrEvents = tree.GetEntries()\n",
+    "    nrEvents = 4999\n",
     "\n",
     "    for (i,entry) in enumerate(tree):\n",
     "        if nrEvents>0:\n",
@@ -120,7 +121,7 @@
     "    \n",
     "    \n",
     "        # Create a numpy array with all data\n",
-    "        dataBuffer = np.array([[j1_FracEM3, j1_FracTile0, j1_TrkWidth, j1_EMF, j1_JVF, j1_NTrk, j1_SumPtTrk, Pt1_EMJESGSCMu, Eta1_EMJESGSCMu, Phi1_EMJESGSCMu, E1_EMJESGSCMu, PtRel_j1_EMJESGSCMu,\n",
+    "        dataBuffer = np.array([[j1_FracEM3, j1_FracTile0, j1_TrkWidth, j1_EMF, j1_JVF, j1_NTrk, j1_SumPtTrk, Pt1_EMJESGSCMu, Eta1_EMJESGSCMu, Phi1_EMJESGSCMu, E1_EMJESGSCMu, PtRel_j1_EMJESGSCMu, \n",
     "                                j2_FracEM3, j2_FracTile0, j2_TrkWidth, j2_EMF, j2_JVF, j2_NTrk, j2_SumPtTrk, Pt2_EMJESGSCMu, Eta2_EMJESGSCMu, Phi2_EMJESGSCMu, E2_EMJESGSCMu, PtRel_j1_EMJESGSCMu]])\n",
     "        if i==0:\n",
     "            data = dataBuffer\n",
@@ -144,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ZZ (12881, 24)\n"
+      "TTbar (5000, 24)\n"
      ]
     }
    ],
